--- a/lial2/index.html
+++ b/lial2/index.html
@@ -13,7 +13,7 @@
       font-family: 'Georgia', serif;
       background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      color: rgb(255, 255, 255);
     }
     section, .overlay {
       min-height: 100vh;
