--- a/ryanc/index.html
+++ b/ryanc/index.html
@@ -87,6 +87,7 @@
       margin-bottom: 30px;
     }
   </style>
+   <base href="/ryanc/">
 </head>
 <body>
   <div class="top-bar">Important Comics to Read</div>
